Feature - v2 GetAllMonitoredObjects API with pagination
