# swagmodels/monitored_object_list.go
@@ -1,0 +1,75 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package swagmodels
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	strfmt "github.com/go-openapi/strfmt"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// MonitoredObjectList monitored object list
+// swagger:model MonitoredObjectList
+type MonitoredObjectList struct {
+
+	// data
+	// Required: true
+	Data MonitoredObjectListData `json:"data"`
+
+	// links
+	Links map[string]string `json:"links,omitempty"`
+}
+
+// Validate validates this monitored object list
+func (m *MonitoredObjectList) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateData(formats); err != nil {
+		// prop
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *MonitoredObjectList) validateData(formats strfmt.Registry) error {
+
+	if err := validate.Required("data", "body", m.Data); err != nil {
+		return err
+	}
+
+	if err := m.Data.Validate(formats); err != nil {
+		if ve, ok := err.(*errors.Validation); ok {
+			return ve.ValidateName("data")
+		}
+		return err
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *MonitoredObjectList) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *MonitoredObjectList) UnmarshalBinary(b []byte) error {
+	var res MonitoredObjectList
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
